test/expected/perr_unterminated_double_bracket.out
shit: 2:1: error: Unterminated '[['.
     2 |  [[ a == b
       |  ^~ here.
shit: 2:10: note:
     2 |  [[ a == b
       |           ^~ Expected ']]'.
